--- a/katon.html
+++ b/katon.html
@@ -95,6 +95,6 @@
 		<img src="katon_img/18.png">
 		<p>электрофореграмма контроля</p>
 		<a href="fenol.hmtl">Фенол</a>
-		<a href="home.html">Домой</a>
+		<a href="index.html">Домой</a>
 	</body>
 </html>
